projects/giri-prod-test/clusternetworkpolicies/dec-pol1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: dec-pol1
  project: giri-prod-test
spec:
  rules:
  - name: dec-rule1
    version: v1
  version: v1
