projects/giri-prod-test/clusternetworkpolicies/dec-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: dec-policy
  project: giri-prod-test
spec:
  rules:
  - name: dec
    version: v1
  version: v1
