projects/giri-prod-test/clusternetworkpolicies/dec13-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: dec13-p1
  project: giri-prod-test
spec:
  rules:
  - name: dec13-r1
    version: v1
  version: v1
