projects/giri-prod-test/clusternetworkpolicies/giri-oct-np-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: giri-oct-np-policy
  project: giri-prod-test
spec:
  rules:
  - name: oct-cr1
    version: v1
  version: v1
