projects/giri-prod-test/clusternetworkpolicies/jan-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: jan-p1
  project: giri-prod-test
spec:
  rules:
  - name: jan-r1
    version: v1
  version: v1
