projects/giri-prod-test/clusternetworkpolicies/k8snp1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: k8snp1
  project: giri-prod-test
spec:
  rules:
  - name: npr1
    version: v1
  version: new
