projects/giri-prod-test/clusternetworkpolicies/mar-cp.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: mar-cp
  project: giri-prod-test
spec:
  rules:
  - name: mar-cp1
    version: v1
  version: v1
