projects/giri-prod-test/clusternetworkpolicies/may-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: may-policy
  project: giri-prod-test
spec:
  rules:
  - name: may-rul1
    version: v1
  version: v1
