projects/giri-prod-test/clusternetworkpolicies/may-xwing-block.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: may-xwing-block
  project: giri-prod-test
spec:
  rules:
  - name: may-cluster-xwing
    version: xwing-block
  version: v1-xwing
