projects/giri-prod-test/clusternetworkpolicies/november-cp.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: november-cp
  project: giri-prod-test
spec:
  rules:
  - name: november-cr
    version: v1
  version: v1
