projects/giri-prod-test/clusternetworkpolicies/oct-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: oct-p1
  project: giri-prod-test
spec:
  rules:
  - name: oct-cr1
    version: v1
  version: v1
