projects/giri-prod-test/clusternetworkpolicies/oct-pol.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: oct-pol
  project: giri-prod-test
spec:
  rules:
  - name: oct-rule1
    version: version1
  version: v1
