projects/giri-prod-test/clusternetworkpolicies/p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: p1
  project: giri-prod-test
spec:
  rules:
  - name: c1
    version: v1
  version: v1
