projects/giri-prod-test/clusternetworkpolicies/rctl-cluster-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: rctl-cluster-policy
  project: giri-prod-test
spec:
  rules:
  - name: rctl-cluster-rule1
    version: rctl-cluster-vers1
  version: rctl-policy-version
