projects/giri-prod-test/clusternetworkpolicies/sep-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: sep-p1
  project: giri-prod-test
spec:
  rules:
  - name: sep-r1
    version: v1
  version: v1
